data/derived/fa15/progs/unify/prog2528.ml.out
Characters 166-168:
  mulByDigit i [let [h2]::t2 = t in [(h2+(h*i mod 10))]@[t2]];;
                                                         ^^
Error: This expression has type int list list
       but an expression was expected of type int
